# LinearRegression

./: .gitignore  CMakeLists.txt  Matrix.cpp  README.md
matrix/: CMakeLists.txt  Matrix.cpp  Matrix.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  testMatrix.cpp
utils/: CMakeLists.txt  Utils.cpp  Utils.h
